# computer_vision

app_project/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Project_ideas  ROI  cmake_install.cmake  croppedImg.cpp  findROI.cpp  inpaint  oculus.cpp  oculus2.cpp  oculus2.cpp~  oculus_base.cpp  oculus_base.cpp~  output.m4v
lab1/: CMakeLists.txt~  DisplayImage  Makefile  detectors.cpp~  tennis (Case Conflict)  tennis.cpp  tennis_tracking.avi
lab1_opencv_intro/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  Tennis  cmake_install.cmake  detectors.cpp  lab1_test.cpp  test
lab2/: Makefile  calibrate  distortion.txt  intrinsic.txt  intrinsic_webcam.txt  lab2_1.cpp  lab2_3.cpp  lab3_4.cpp  pose  report.aux  undistort
lab2_camera_calibration/: CMakeCache.txt  CMakeLists.txt  CornerDetect  cmake_install.cmake  distortion_webcam.txt  intrinsic  lab2_2.cpp  lab2_5.cpp  lab3_2.cpp  report.dvi  report.tex  undistortWebcam
lab3/: CMakeCache.txt  CMakeLists.txt  Calibrate  Makefile  alex.cpp  lDistortion.txt  lIntrinsic.txt  lab3_1.cpp  lab3_3.cpp  measurement  pointGet  rIntrinsic.txt  stereoParams.txt  stereoParamsNew.txt  stereoRectifyParams.txt  team9_18_5_of_20.mkv  view.cpp  view.cpp~
lab3_stereo_calibration/: alex  cmake_install.cmake  lab3_4.cpp  lab3_5.cpp  lab3_report.aux  lab3_report.tex  rDistortion.txt  rectification
lab5/: Makefile  featureMatch  findExtrinsic  multiFeatureMatch  multi_feature_matching.cpp  multi_feature_matching.cpp~  opticalFlow  optical_flow1.cpp  optical_flow1.cpp~  paraRealStart.txt  turnCubeEnd.txt  turnRealEnd.txt  turnRealStart.txt  writeup.dvi
lab5_motion_field/: CMakeCache.txt  Makefile  cmake_install.cmake  decompose.h  featureMatch  opticalFlow  (+5 more)
lab5_motion_field/turn_in/: CMakeLists.txt  multi_feature_matching.cpp  optical_flow1.cpp
lab6/turnin/: CMakeLists.txt  turnCubeStart.txt  turnRealEnd.txt
tennis_ball/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tennis  tennis_ball.avi  tennis_ball.cpp  tennis_ball.cpp~
(+35 files in other folders)
