cmake_minimum_required(VERSION 2.8)
project( StereoCalib )
find_package( OpenCV REQUIRED )
find_package(Threads REQUIRED )

add_executable( Calibrate lab3_1.cpp )
target_link_libraries( Calibrate ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} )
add_executable( pointGet lab3_3.cpp )
target_link_libraries( pointGet ${OpenCV_LIBS})
add_executable( rectification lab3_4.cpp )
target_link_libraries( rectification ${OpenCV_LIBS} )
add_executable( measurement lab3_5.cpp )
target_link_libraries( measurement ${OpenCV_LIBS} )
add_executable( alex alex.cpp )
target_link_libraries( alex ${OpenCV_LIBS} )
